--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
+    "d3": "^7.9.0",
     "firebase": "^11.9.1",
+    "heatmap.js": "^2.0.5",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
