--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,13 @@
     "chart.js": "^4.5.0",
     "d3": "^7.9.0",
     "firebase": "^11.9.1",
-    "heatmap.js": "^2.0.5",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
-    "rrweb": "^2.0.0-alpha.4"
+    "rrweb": "^2.0.0-alpha.4",
+    "simpleheat": "^0.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
