--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "rrweb": "^2.0.0-alpha.4",
+    "rrweb-player": "^1.0.0-alpha.4",
     "simpleheat": "^0.4.0"
   },
   "devDependencies": {
