--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.5.0",
     "d3": "^7.9.0",
     "firebase": "^11.9.1",
+    "html2pdf.js": "^0.10.3",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
